welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:-6: error: Missing closing brace `}' assumed here
try {
^sumDouble:1: error: expected class or object definition
def sumDouble(a: Integer, b: Integer): Integer = {if (a==b){return 2*a}
^